# NeoInstall

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: cli.rs  download.rs  lib.rs  libraries.rs  main.rs  manifest.rs  maven.rs  meta.rs  mirrors.rs  processors.rs  profile.rs  side.rs  util.rs
