[package]
name = "neo-install"
version = "0.1.0"
edition = "2024"
authors = ["RedstoneWizard08"]
homepage = "https://github.com/RedstoneWizard08/NeoInstall"
repository = "https://github.com/RedstoneWizard08/NeoInstall"
readme = "./README.md"
license = "MIT"
description = "A blazingly fast Rust-based alternative installer for NeoForge."

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.36", features = ["derive"] }
indicatif = { version = "0.17.11", features = ["rayon"] }
itertools = "0.14.0"
libsui = "0.7.0"
rayon = "1.10.0"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt", "macros", "rt-multi-thread"] }
zip = "2.6.1"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ bin }-{ target }"
pkg-fmt = "bin"
